fix z-index

--- a/source/less/components/catalog.less
+++ b/source/less/components/catalog.less
@@ -22,7 +22,6 @@
   margin: 0 auto;
   height: 177px;
   position: relative;
-  z-index: -1;
 
   @media @tablet {
     height: 255px;
