--- a/source/less/components/choose.less
+++ b/source/less/components/choose.less
@@ -12,7 +12,6 @@
   background-repeat: no-repeat;
   background-size: auto;
   position: relative;
-  z-index: -1;
 
   @media @tablet {
     background-image: url("./../../img/hero-tablet@1x.jpg");
