--- a/source/less/components/make-order.less
+++ b/source/less/components/make-order.less
@@ -11,7 +11,6 @@
   justify-content: center;
   align-items: center;
   position: relative;
-  z-index: -1;
 
   @media @tablet {
     height: 226px;
